--- a/ex-1/ex-1.css
+++ b/ex-1/ex-1.css
@@ -3,20 +3,10 @@ body {
 }
 
 .ball {
-    width: 100px;
-    height: 100px;
+    width: 50%;
+    height: 50px;
     /*background-color: #ff8800;*/
     background-color: #009f4d;
-    border-radius: 50px;
+    border-radius: .8rem;
     animation: move 5s infinite;
-}
-
-@keyframes move {
-    0% {
-        margin-left: 0px;
-    }
-    100% {
-        margin-left: 200px;
-    }
-    
 }
